; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/provisioning/softap_prov/main/extr_app_prov.c_app_prov_get_wifi_disconnect_reason.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/provisioning/softap_prov/main/extr_app_prov.c_app_prov_get_wifi_disconnect_reason.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@g_prov = common dso_local global %struct.TYPE_2__* null, align 8
@ESP_FAIL = common dso_local global i32 0, align 4
@WIFI_PROV_STA_DISCONNECTED = common dso_local global i64 0, align 8
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @app_prov_get_wifi_disconnect_reason(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_prov, align 8
  %5 = icmp eq %struct.TYPE_2__* %4, null
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32*, i32** %3, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %6, %1
  %10 = load i32, i32* @ESP_FAIL, align 4
  store i32 %10, i32* %2, align 4
  br label %25

11:                                               ; preds = %6
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_prov, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @WIFI_PROV_STA_DISCONNECTED, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = load i32, i32* @ESP_FAIL, align 4
  store i32 %18, i32* %2, align 4
  br label %25

19:                                               ; preds = %11
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_prov, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = load i32*, i32** %3, align 8
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* @ESP_OK, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %19, %17, %9
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
